Added :dev profile with profiler.